@@ -28,7 +28,7 @@ Alien::automake                                = 0.16
 Alien::Autotools                               = 1.05
 Alien::Base::ModuleBuild                       = 1.15
 Alien::bison                                   = 0.21
-Alien::Build                                   = 2.41
+Alien::Build                                   = 2.45
 Alien::Build::Git                              = 0.08
 Alien::Build::MB                               = 0.07
 Alien::Build::Plugin::Decode::SourceForge      = 0.02
@@ -43,7 +43,7 @@ Alien::castxml                                 = 0.01
 Alien::chromaprint                             = 0.02
 Alien::CMake                                   = 0.12
 Alien::cmake3                                  = 0.08
-Alien::curl                                    = 0.08
+Alien::curl                                    = 0.09
 Alien::Editline                                = 0.10
 Alien::Expat                                   = 0.02
 Alien::FFI                                     = 0.25
@@ -82,7 +82,7 @@ Alien::xz                                      = 0.08
 ;Alt::ExtUtils::PkgConfig::PLICEASE            = 1.15
 ;Alt::FFI::Raw::FFI                            = 0.04
 AnyEvent::Finger                               = 0.12
-AnyEvent::FTP                                  = 0.17
+AnyEvent::FTP                                  = 0.18
 AnyEvent::Ident                                = 0.08
 AnyEvent::Open3::Simple                        = 0.87
 AnyEvent::WebSocket::Client                    = 0.54
@@ -108,13 +108,15 @@ Const::Introspect::C                           = 0.01
 Devel::ebug                                    = 0.64
 Devel::ebug::HTTP                              = 0.36
 Dist::Zilla::App::Command::aliendeps           = 0.03
+Dist::Zilla::MintingProfile::AlienBuild        = 0.05
+Dist::Zilla::MintingProfile::FFI               = 0.02
 Dist::Zilla::Plugin::AlienBuild                = 0.32
 Dist::Zilla::Plugin::Alt                       = 0.08
 Dist::Zilla::Plugin::ArchiveTar                = 0.03
 Dist::Zilla::Plugin::CommentOut                = 0.05
 Dist::Zilla::Plugin::CSS::Compressor           = 0.02
 Dist::Zilla::Plugin::FFI                       = 1.04
-Dist::Zilla::Plugin::InsertExample             = 0.14
+Dist::Zilla::Plugin::InsertExample             = 0.15
 Dist::Zilla::Plugin::JavaScript::Minifier      = 0.02
 Dist::Zilla::Plugin::Libarchive                = 0.03
 Dist::Zilla::Plugin::MathInt64                 = 0.10
@@ -129,8 +131,8 @@ FFI                                            = 1.15
 FFI::C                                         = 0.10
 FFI::C::Stat                                   = 0.02
 FFI::CheckLib                                  = 0.28
-FFI::ExtractSymbols                            = 0.05
-FFI::Platypus                                  = 1.55
+FFI::ExtractSymbols                            = 0.06
+FFI::Platypus                                  = 1.56
 FFI::Platypus::Declare                         = 1.34
 FFI::Platypus::Lang::CPP                       = 0.05
 FFI::Platypus::Lang::CPP::Demangle::XS         = 0.03
@@ -151,16 +153,17 @@ File::Listing::Ftpcopy                         = 0.09
 File::ReadBackwards                            = 1.06
 File::ShareDir::Dist                           = 0.07
 File::Which                                    = 1.27
-File::XDG                                      = 0.07
+File::XDG                                      = 0.08
 Kafka::Librd                                   = 0.20
 Lingua::Alphabet::Phonetic::LAPD               = 0.02
 Log::Log4perl::Appender::TAP                   = 0.04
 Mojolicious::Plugin::Ident                     = 0.31
 Mojolicious::Plugin::TtRenderer                = 1.62
 NewFangle                                      = 0.07
+Return::MultiLevel                             = 0.06
 Package::Checkpoint                            = 0.01
 PeekPoke::FFI                                  = 0.02
-Perl::Critic::Plicease                         = 0.03
+Perl::Critic::Plicease                         = 0.04
 Photography::DX                                = 0.02
 Photography::EV                                = 0.07
 PkgConfig                                      = 0.25026
@@ -170,6 +173,8 @@ PPIx::DocumentName                             = 1.01
 Shell::Config::Generate                        = 0.34
 Shell::Guess                                   = 0.09
 String::Template                               = 0.23
+Task::AlienDev                                 = 0.02
+Task::FFIDev                                   = 0.02
 Term::Clui                                     = 1.76
 Term::EditLine                                 = 0.11
 Test::Alien::CPP                               = 1.02
@@ -184,7 +189,7 @@ Test2::Tools::HTTP                             = 0.09
 Test2::Tools::HTTP::UA::Mojo                   = 0.04
 Test2::Tools::JSON::Pointer                    = 0.02
 Test2::Tools::PerlCritic                       = 0.04
-Test2::Tools::Process                          = 0.05
+Test2::Tools::Process                          = 0.06
 Test2::Tools::URL                              = 0.06
 Text::HumanComputerWords                       = 0.04
 Text::Hunspell::FFI                            = 0.04
